adding macOS M1 action

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,7 +30,7 @@ env:
   ACTIONS_ALLOW_UNSECURE_COMMANDS: true # required to setup CSC
 
 jobs:
-  main:
+  build-test:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
