--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -59,12 +59,11 @@ jobs:
       - name: Versions
         run: node -v && npm -v && dotnet --version && node -p process.platform && node -p process.arch
 
-      - if: runner.os == 'macOS'
-        name: Mono
-        run: |
-          which mono
-          ls /Library/Frameworks
-
+      # - if: runner.os == 'macOS'
+      #   name: Mono
+      #   run: |
+      #     which mono
+      #     export PKG_CONFIG_PATH="/Library/Frameworks/Mono.framework/Versions/Current/lib/pkgconfig":$PKG_CONFIG_PATH
       #   name: Remove Mono from macOS # Incomplete Mono install interferes with gyp compile
       #   run: |
       #     sudo rm -rf /Library/Frameworks/Mono.framework
