--- a/.gitignore
+++ b/.gitignore
@@ -72,7 +72,8 @@ tools/*.nupkg
 tools/*.zip
 tools/nuget.exe
 
-test-results*.*
+*test-results*.*
+TemporaryGeneratedFile*.*
 /lib/native/win32/ia32/*/concrt140.dll
 /lib/native/win32/ia32/*/msvcp140.dll
 /lib/native/win32/ia32/*/vccorlib140.dll
