--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,7 @@ executors:
   node: 
     docker:
       - image: cimg/node:20.12.2
-    resource_class: medium
+    resource_class: arm.medium
   windows: 
     machine:
       image: windows-server-2022-gui:current
@@ -96,5 +96,6 @@ workflows:
       - test-node:
           matrix:
             parameters:
-              os: ['node', 'windows', 'macos']
+              os: ['node']
+              node-version: ['14', '16', '18', '20', '22']
 
