--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -97,5 +97,5 @@ workflows:
           matrix:
             parameters:
               os: ['node']
-              node-version: ['14.12.3', '16.20.2', '18.20.3', '20.14.0', '22.2.0']
+              node-version: ["14.17.6", "16.9.0"]
 
