--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,25 +1,25 @@
 version: 2.1
-# orbs:
-#   node: circleci/node@5
-#   win: circleci/windows@5.0
-#   macos: circleci/macos@2.4.1
+orbs:
+  node: circleci/node@5
+  win: circleci/windows@5.0
+  macos: circleci/macos@2.4.1
 
 executors:
-  # node: 
-  #   docker:
-  #     - image: cimg/node:20.12.2
-  #   resource_class: arm.medium
-  # windows: 
-  #   machine:
-  #     image: windows-server-2022-gui:current
-  #   resource_class: windows.medium
-  # macos: 
-  #   macos:
-  #     xcode: 15.2.0
-  linux:
+  node: 
+    docker:
+      - image: cimg/node:20.12.2
+    resource_class: arm.medium
+  windows: 
+    machine:
+      image: windows-server-2022-gui:current
+    resource_class: windows.medium
+  macos: 
+    macos:
+      xcode: 15.2.0
+  linux: 
     docker:
       - image: cimg/base:current
-    resource_class: arm.medium    
+    resource_class: arm.medium
 
 refs:
   steps:
@@ -78,6 +78,7 @@ jobs:
       # - node/install-packages:
       #     cache-path: ~/project/node_modules
       #     override-ci-command: npm install
+      - *InstallNode
       - *Versions
       - run: npm install 
       - save_cache:
@@ -101,5 +102,5 @@ workflows:
           matrix:
             parameters:
               os: ['linux']
-              node-version: ["14.17.6", "16.9.0"]
+              node-version: ['14.12.3', '16.20.2', '18.20.3', '20.14.0', '22.2.0']
 
