--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -68,6 +68,8 @@ jobs:
     parameters:
       os:
         type: executor
+      node-version:
+        type: string
     executor: << parameters.os >>
     steps:
       - checkout
@@ -102,5 +104,5 @@ workflows:
           matrix:
             parameters:
               os: ['linux']
-              node-version: ['14.12.3', '16.20.2', '18.20.3', '20.14.0', '22.2.0']
+              node-version: ['14', '16', '18', '20', '22']
 
