--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,7 @@ executors:
   node: 
     docker:
       - image: cimg/node:20.12.2
-    resource_class: arm.medium
+    resource_class: medium
   windows: 
     machine:
       image: windows-server-2022-gui:current
@@ -16,10 +16,14 @@ executors:
   macos: 
     macos:
       xcode: 15.2.0
-  linux: 
+  linux-arm: 
     docker:
       - image: cimg/base:current
     resource_class: arm.medium
+  linux: 
+    docker:
+      - image: cimg/base:current
+    resource_class: medium
 
 refs:
   steps:
@@ -103,6 +107,6 @@ workflows:
       - test-node:
           matrix:
             parameters:
-              os: ['macos']
-              node-version: ['16', '18', '20', '22']
+              os: ['linux', 'linux-arm']
+              node-version: ['14','16', '18', '20', '22']
 
