--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,10 @@ name: CI
 
 on: 
   push:
+    branches-ignore:
+      - 'circleci'
     paths-ignore:
+      - '.circleci'
       - 'samples/*'
       - 'stress/*'
       - 'performance/*'
@@ -23,7 +26,6 @@ on:
       - 'tools/nuget/*'
       - '.npmignore'
       - 'test/config.json'
-      - 'test/config.json'
       - 'test/double'
 
 env:
@@ -37,7 +39,7 @@ jobs:
         # os: [macos-latest, ubuntu-latest, windows-2019]
         # node: [21.x, 20.x, 18.x, 16.x]
         os: [macos-14]
-        node: [20.x]
+        node: [18.x, 20.x, 22.x]
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
