--- a/.gitignore
+++ b/.gitignore
@@ -84,6 +84,11 @@ TemporaryGeneratedFile*.*
 /lib/native/win32/x64/*/vccorlib140.dll
 /lib/native/win32/x64/*/vcruntime140.dll
 
+/lib/native/win32/arm64/*/concrt140.dll
+/lib/native/win32/arm64/*/msvcp140.dll
+/lib/native/win32/arm64/*/vccorlib140.dll
+/lib/native/win32/arm64/*/vcruntime140.dll
+
 test/mochawesome-report
 mochawesome-report
 mochawesome.json
