--- a/src/double/Edge.js/Edge.js.csproj
+++ b/src/double/Edge.js/Edge.js.csproj
@@ -64,4 +64,7 @@
     <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyModel" Version="8.0.0" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="dotnet\" />
+  </ItemGroup>
 </Project>
