--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,6 @@ on:
     branches-ignore:
       - 'circleci'
     paths-ignore:
-      - '.circleci'
       - 'samples/*'
       - 'stress/*'
       - 'performance/*'
@@ -25,6 +24,7 @@ on:
       - '*.nuspec'
       - 'tools/nuget/*'
       - '.npmignore'
+      - 'test/config.json'
       - 'test/config.json'
       - 'test/double'
 
