--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,7 +49,7 @@ jobs:
         with:
           node-version: '${{ matrix.node }}'
           cache: 'npm'
-          cache-dependency-path: ${{ runner.os }}-${{ matrix.node }}-package.json
+          cache-dependency-path: package.json
       
       - name: Cache node modules
         id: cache-nodemodules
