--- a/package.json
+++ b/package.json
@@ -50,8 +50,7 @@
     "mocha-multi-reporters": "^1.5.1",
     "mochawesome": "^7.1.3",
     "mochawesome-merge": "^4.3.0",
-    "mochawesome-report-generator": "^6.2.0",
-    "xunit-viewer": "^10.6.1"
+    "mochawesome-report-generator": "^6.2.0"
   },
   "homepage": "https://github.com/agracio/edge-js",
   "repository": {
