--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,6 @@ on:
     branches-ignore:
       - 'circleci'
     paths-ignore:
-      - '.circleci'
       - 'samples/*'
       - 'stress/*'
       - 'performance/*'
@@ -27,9 +26,13 @@ on:
       - '.npmignore'
       - 'test/config.json'
       - 'test/double'
+      - '.circleci'
+      - 'README.md'
+
 
 env:
   ACTIONS_ALLOW_UNSECURE_COMMANDS: true # required to setup CSC
+  DOTNET_CLI_TELEMETRY_OPTOUT: 1 
 
 jobs:
   build-test:
