--- a/appveyor.yml
+++ b/appveyor.yml
@@ -61,9 +61,9 @@ skip_commits:
     - 'tools/nuget/*'
     - '.npmignore'
     - 'test/config.json'
-    - 'test/config.json'
     - 'test/double'
     - 'appveyor_double.yml'
+    - '.circleci'
 
 build: off
 
