--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,8 +44,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        # os: [macos-13, macos-14, ubuntu-22.04, windows-2022]
-        os: [macos-14, windows-2022]
+        os: [macos-13, macos-14, ubuntu-22.04, windows-2022]
+        # os: [macos-14, windows-2022]
         node: [18, 20, 22]
 
     steps:
