--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,13 +39,14 @@ jobs:
         uses: fjogeleit/http-request-action@v1
         with:
           url: 'https://nodejs.org/dist/index.json'
+          method: 'GET'
 
       # - name: Show Response
       #   run: |
       #     echo ${{ steps.myRequest.outputs.response }}
       #     echo ${{ steps.myRequest.outputs.headers }}
       #     echo ${{ steps.myRequest.outputs.status }}
-      #     echo ${{ fromJson(steps.myRequest.outputs.response).field_you_want_to_access }}    
+      #     echo ${{ fromJson(steps.myRequest.outputs.response).field_you_want_to_access }}
 
       - name: HTTP Request Action
         id: node-version
