updating GitHub pipeline

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,12 +34,12 @@ jobs:
     name: build ${{ matrix.os }}-v${{ inputs.build-version }}
     steps:
 
-      - name: Make Request
-        id: node-version-request
-        uses: fjogeleit/http-request-action@v1
-        with:
-          url: 'https://nodejs.org/dist/index.json'
-          method: 'GET'
+      # - name: Make Request
+      #   id: node-version-request
+      #   uses: fjogeleit/http-request-action@v1
+      #   with:
+      #     url: 'https://nodejs.org/dist/index.json'
+      #     method: 'GET'
 
       # - name: Show Response
       #   run: |
@@ -57,15 +57,16 @@ jobs:
             try {
               const url = 'https://nodejs.org/dist/index.json';
               const result = await github.request(url);
-              let json = JSON.parse( ${{ steps.node-version-request.outputs.response }});
-              for (const el of json.data.sort()) {
-                let version = el.version.substring(1, el.version.length) ;
-                if(version.startsWith(${{ inputs.build-version }})){
-                  console.log(version);
-                  core.setOutput("version", version);
-                  core.setFailed(version);
-                  //return version;
-                }
+              console.log(result.data)
+              //let json = JSON.parse( ${{ steps.node-version-request.outputs.response }});
+              //for (const el of json.data.sort()) {
+              //  let version = el.version.substring(1, el.version.length) ;
+              //  if(version.startsWith(${{ inputs.build-version }})){
+              //    console.log(version);
+              //    core.setOutput("version", version);
+              //    core.setFailed(version);
+              //    //return version;
+              //  }
               }
             } catch(err) {
               core.error("Error while reading or parsing mochawesome.json")
