--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -51,21 +51,15 @@ jobs:
         uses: actions/checkout@v4
 
 
-      - name: HTTP Request Action
+      - name: Get latest Node.js version
         id: node-version
-        uses: actions/github-script@v7
-        with:
-          result-encoding: string
-          script: |
-            try {
-              const script = require('./tools/getNodeVersion.js')
-              //await script({${{ inputs.build-version }}, core})
-              await script({github, context, core})
-              core.setFailed('done')
-            } catch(err) {
-              core.error("Error while reading or parsing mochawesome.json")
-              core.setFailed(err)
-            }
+        run: |
+          node tools/getVersionAction.js
+          echo "version=$(cat node.txt)" >> $GITHUB_OUTPUT
+
+      - name: Get latest Node.js version
+        run: |
+          core.setFailed("${{steps.node-version.outputs.version}}")
     
       - name: Resolve Electron version for test
         id: electron-test-version
